--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,10 @@
             <artifactId>problem-spring-web-starter</artifactId>
             <version>0.26.2</version>
         </dependency>
-      	<!--<dependency>
+        <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-      	</dependency>-->
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
