--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mariadb://localhost/guinessapp
 spring.datasource.username=guinessapp
 spring.datasource.password=guinessapp
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
